# msg-core

./: pyproject.toml
requirements/: base.txt
src/ai_api/: __init__.py  authentication.py
src/ai_api/models/: base.py  customtypes.py  manager.py  soft_delete.py  timestamped.py
src/ai_api/utils/: __init__.py
src/ai_workspaces/: apps.py
src/ai_workspaces/models/: __init__.py
src/aicore/: settings.py
src/aicore/models/: manager.py  queryset.py
